--- a/src/css/heritage-landing-page.scss
+++ b/src/css/heritage-landing-page.scss
@@ -85,7 +85,9 @@ body {
     }
   }
 }
-
+.logo__img {
+  width: 100%;
+}
 
 
 
@@ -553,17 +555,18 @@ body {
   background-color: transparent;
   text-align: center;
   @include tablet {
-    width: 45%;
+    width: 100%;
     margin-bottom: 40px;
     padding-right: 31px;
     padding-left: 31px;
   }
   @include large-phone {
-    width: 100%;
+
   }
   @include phone {
     margin-right: 0px;
     margin-left: 0px;
+    padding:0;
   }
   &._1 {
     @include tablet {
@@ -604,6 +607,7 @@ body {
     @include phone {
       padding-right: 20px;
       background-position: 0px 0px, 14% 50%;
+      display: none;
     }
   }
 }
@@ -757,6 +761,7 @@ body {
   margin-right: 9px;
   margin-left: 9px;
   padding-right: 10px;
+  min-width: 220px;
   @include tablet {
     padding-right: 0px;
   }
@@ -769,7 +774,7 @@ body {
 }
 
 .location_headline {
-  margin-top: 0px;
+  margin-top: 10px;
   margin-bottom: 20px;
   padding-bottom: 8px;
   border-bottom: 1px solid rgba(165, 218, 245, .45);
@@ -796,6 +801,9 @@ body {
   font-weight: 400;
   @include tablet {
     font-size: 20px;
+  }
+  a {
+    color: #fff;
   }
 }
 
@@ -852,13 +860,11 @@ body {
 }
 
 .assesment_text {
-  width: 400px;
   margin-bottom: 36px;
   color: #0588ca;
   font-size: 18px;
   line-height: 1.5;
   &.big {
-    width: 450px;
     font-size: 24px;
     font-weight: 500;
   }
@@ -907,6 +913,12 @@ body {
   margin-right: auto;
   margin-left: auto;
   background-color: transparent;
+  @include tablet {
+    width: 100%;
+  }
+  @include phone {
+    height: auto;
+  }
 }
 
 .slide1 {
